Claude: Fix warnings
